Fix my pet cutting off bug

--- a/frontend/src/components/feed/my_pets/my_pets.css
+++ b/frontend/src/components/feed/my_pets/my_pets.css
@@ -61,7 +61,7 @@
 }
 
 .my-pet-details-list {
-  width: 80%;
+  width: 95%;
   display: flex;
   flex-direction: column;
   align-items: center;
